--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ more-itertools
 transformers>=4.19.0
 ffmpeg-python==0.2.0
 git+https://github.com/openai/whisper.git
---extra-index-url https://download.pytorch.org/whl/cu113
+--extra-index-url https://download.pytorch.org/whl/torch_stable.html
 torch
 sounddevice
 scipy
